# constraint-scanner

./: .env.example  README.md  alembic.ini  docker-compose.yml  pyproject.toml
config/: settings.example.yaml  settings.local.yaml
migrations/: env.py
migrations/versions/: 20260414_0001_initial_schema.py  20260415_0002_opportunity_lifecycle.py  20260415_0003_opportunity_scope_key.py  20260415_0004_simulation_runs.py
scripts/: bootstrap_markets.py  replay_feed.py  run_api.py  run_detector_once.py  run_feed_service.py  run_simulator_once.py  seed_manual_constraints.py
src/constraint_scanner/: __init__.py  __main__.py  control_runtime.py  main.py  manual_constraints.py  runtime.py
src/constraint_scanner/analytics/: __init__.py
tests/integration/: conftest.py  test_catalog_service.py  test_detector_service.py  test_end_to_end_replay.py  test_graph_builder.py  test_ingestion.py  test_migrations.py  test_operator_api.py  test_repository_roundtrips.py  test_risk_policy_service.py  test_simulator_service.py  test_trader_service_flow.py
tests/replay/: binary_complement_sequence.jsonl
tests/unit/: test_catalog_grouping.py  test_catalog_normalizer.py  test_combinatorial_detector.py  test_config_loader.py  test_constraint_templates.py  test_core_enums.py  test_detection_persistence.py  test_detection_ranking.py  test_executable_pricing.py  test_ids.py  test_intra_market_detector.py  test_operator_scripts.py  test_polymarket_clients.py  test_risk_policy.py  test_schemas.py  test_simulation_engine.py  test_template_registry.py  test_trading_order_builder.py
(+109 files in other folders)
