[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "constraint-scanner"
version = "0.1.0"
description = "Constraint Scanner v1 service scaffold."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Terrence Henry" }
]
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "httpx>=0.28",
  "psycopg[binary]>=3.2",
  "pydantic>=2.9",
  "PyYAML>=6.0",
  "SQLAlchemy>=2.0",
  "structlog>=24.4",
  "uvicorn[standard]>=0.32",
  "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[project.scripts]
constraint-scanner = "constraint_scanner.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
